// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Renders correctly 1`] = `
<div>
  <button
    class="relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly secondary 1`] = `
<div>
  <button
    class="relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-base font-bold text-white bg-brand-black border-transparent hover:bg-coreUI-text-secondary active:bg-brand-black"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly size lg 1`] = `
<div>
  <button
    class="relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-md font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly size sm 1`] = `
<div>
  <button
    class="relative inline-flex flex-row items-center rounded-full border-2 px-3 py-2 text-sm font-semibold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly size xl 1`] = `
<div>
  <button
    class="relative inline-flex flex-row items-center rounded-full border-2 px-6 py-3 text-lg font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly size xs 1`] = `
<div>
  <button
    class="relative inline-flex flex-row items-center rounded-full border-2 px-3 py-2 text-xs font-semibold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly tertiary 1`] = `
<div>
  <button
    class="relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-base font-bold text-brand-black bg-white border-brand-black hover:border-coreUI-text-tertiary active:border-brand-black"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component Renders correctly with extra classes 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component renders center 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 justify-center px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component renders disabled 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary pointer-events-none opacity-70 bg-coreUI-background-images !border-coreUI-background-images text-coreUI-text-secondary"
    disabled=""
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component renders fullWidth 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 justify-center px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary w-full md:max-w-xs md:mx-auto"
    role="button"
  >
    CTA
  </button>
</div>
`;

exports[`Button component renders with arrow 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 pl-4 pr-8 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
    <svg
      class="absolute right-2 fill-brand-black text-brand-black stroke-brand-black fill-brand-black stroke-brand-black"
      fill="inherit"
      height="14"
      viewBox="0 0 9 16"
      width="14"
    >
      <path
        clip-rule="evenodd"
        d="M0.999999 1L8 8L1 15"
        fill="none"
        fill-rule="evenodd"
        stroke="inherit"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders with arrow lg 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 pl-4 pr-8 py-2 text-md font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
    <svg
      class="absolute right-2 fill-brand-black text-brand-black stroke-brand-black fill-brand-black stroke-brand-black"
      fill="inherit"
      height="14"
      viewBox="0 0 9 16"
      width="14"
    >
      <path
        clip-rule="evenodd"
        d="M0.999999 1L8 8L1 15"
        fill="none"
        fill-rule="evenodd"
        stroke="inherit"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders with arrow md 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 pl-4 pr-8 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
    <svg
      class="absolute right-2 fill-brand-black text-brand-black stroke-brand-black fill-brand-black stroke-brand-black"
      fill="inherit"
      height="14"
      viewBox="0 0 9 16"
      width="14"
    >
      <path
        clip-rule="evenodd"
        d="M0.999999 1L8 8L1 15"
        fill="none"
        fill-rule="evenodd"
        stroke="inherit"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders with arrow sm 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 pl-3 pr-8 py-2 text-sm font-semibold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
    <svg
      class="absolute right-2 fill-brand-black text-brand-black stroke-brand-black fill-brand-black stroke-brand-black"
      fill="inherit"
      height="14"
      viewBox="0 0 9 16"
      width="14"
    >
      <path
        clip-rule="evenodd"
        d="M0.999999 1L8 8L1 15"
        fill="none"
        fill-rule="evenodd"
        stroke="inherit"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders with arrow xl 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 pl-6 pr-10 py-3 text-lg font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
    <svg
      class="absolute right-3 fill-brand-black text-brand-black stroke-brand-black fill-brand-black stroke-brand-black"
      fill="inherit"
      height="20"
      viewBox="0 0 9 16"
      width="20"
    >
      <path
        clip-rule="evenodd"
        d="M0.999999 1L8 8L1 15"
        fill="none"
        fill-rule="evenodd"
        stroke="inherit"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders with arrow xs 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 pl-3 pr-8 py-2 text-xs font-semibold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    CTA
    <svg
      class="absolute right-2 fill-brand-black text-brand-black stroke-brand-black fill-brand-black stroke-brand-black"
      fill="inherit"
      height="14"
      viewBox="0 0 9 16"
      width="14"
    >
      <path
        clip-rule="evenodd"
        d="M0.999999 1L8 8L1 15"
        fill="none"
        fill-rule="evenodd"
        stroke="inherit"
        stroke-width="2"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders with icon 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    <svg
      class="mr-4 fill-brand-black text-brand-black stroke-brand-black fill-brand-black stroke-brand-black"
      fill="inherit"
      height="24"
      viewBox="0 0 30 30"
      width="24"
    >
      <path
        clip-rule="evenodd"
        d="M5.04687 23.0298C3.26175 20.8494 2.1837 18.0888 2.16435 15.0823L2.16472 15.0822V14.9998C2.16472 7.91007 8.05342 2.14287 15.2934 2.14287C22.5334 2.14287 28.4221 7.91355 28.4221 14.9998C28.4221 18.0382 27.3406 20.8295 25.5353 23.0329C24.2215 19.9059 21.4599 17.5657 18.174 16.6882C19.7034 15.7339 20.7351 14.0713 20.7351 12.1614C20.7351 9.18876 18.2655 6.77288 15.2356 6.77288C12.2057 6.77288 9.73609 9.18876 9.73609 12.1614C9.73609 14.0857 10.7819 15.756 12.3326 16.7076C9.07944 17.6012 6.34969 19.9271 5.04687 23.0298ZM15.2937 29.1C23.2302 29.1 29.6874 22.7784 29.6874 15C29.6874 7.22157 23.2302 0.9 15.2937 0.9C7.35721 0.9 0.9 7.22157 0.9 15C0.9 22.7784 7.35721 29.1 15.2937 29.1ZM15.2937 27.857C11.6703 27.857 8.38703 26.4092 6.00673 24.0764C7.34017 20.2193 11.1009 17.5535 15.2937 17.5535C19.4864 17.5535 23.2467 20.2225 24.5807 24.0764C22.2008 26.4092 18.9173 27.857 15.2937 27.857ZM15.2366 16.3101C12.8992 16.3101 11.0019 14.4489 11.0019 12.1645C11.0019 9.88011 12.8992 8.01887 15.2366 8.01887C17.5741 8.01887 19.4713 9.88011 19.4713 12.1645C19.4711 14.4491 17.5738 16.3101 15.2366 16.3101Z"
        fill="inherit"
        fill-rule="evenodd"
        stroke="inherit"
        stroke-width="0.2"
      />
    </svg>
    CTA
  </button>
</div>
`;

exports[`Button component renders with icon small 1`] = `
<div>
  <button
    class="anotherClass relative inline-flex flex-row items-center rounded-full border-2 px-3 py-2 text-xs font-semibold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
    role="button"
  >
    <svg
      class="mr-2 fill-brand-black text-brand-black stroke-brand-black fill-brand-black stroke-brand-black"
      fill="inherit"
      height="20"
      viewBox="0 0 30 30"
      width="20"
    >
      <path
        clip-rule="evenodd"
        d="M5.04687 23.0298C3.26175 20.8494 2.1837 18.0888 2.16435 15.0823L2.16472 15.0822V14.9998C2.16472 7.91007 8.05342 2.14287 15.2934 2.14287C22.5334 2.14287 28.4221 7.91355 28.4221 14.9998C28.4221 18.0382 27.3406 20.8295 25.5353 23.0329C24.2215 19.9059 21.4599 17.5657 18.174 16.6882C19.7034 15.7339 20.7351 14.0713 20.7351 12.1614C20.7351 9.18876 18.2655 6.77288 15.2356 6.77288C12.2057 6.77288 9.73609 9.18876 9.73609 12.1614C9.73609 14.0857 10.7819 15.756 12.3326 16.7076C9.07944 17.6012 6.34969 19.9271 5.04687 23.0298ZM15.2937 29.1C23.2302 29.1 29.6874 22.7784 29.6874 15C29.6874 7.22157 23.2302 0.9 15.2937 0.9C7.35721 0.9 0.9 7.22157 0.9 15C0.9 22.7784 7.35721 29.1 15.2937 29.1ZM15.2937 27.857C11.6703 27.857 8.38703 26.4092 6.00673 24.0764C7.34017 20.2193 11.1009 17.5535 15.2937 17.5535C19.4864 17.5535 23.2467 20.2225 24.5807 24.0764C22.2008 26.4092 18.9173 27.857 15.2937 27.857ZM15.2366 16.3101C12.8992 16.3101 11.0019 14.4489 11.0019 12.1645C11.0019 9.88011 12.8992 8.01887 15.2366 8.01887C17.5741 8.01887 19.4713 9.88011 19.4713 12.1645C19.4711 14.4491 17.5738 16.3101 15.2366 16.3101Z"
        fill="inherit"
        fill-rule="evenodd"
        stroke="inherit"
        stroke-width="0.2"
      />
    </svg>
    CTA
  </button>
</div>
`;
